--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -1,198 +1,73 @@
 <div>
+  <!--pre>{{kamers}}</pre-->
   <br />
 
   <div class="row">
     <div class=" col-12 d-flex text-sm-right">
-      <button
-        type="button"
-        class="btn btn-outline-primary btn-sm"
-        (click)="showAvailableRoomsModal()"
-      >
-        Beschikbare kamers
-      </button>
-      <button
-        type="button"
-        class="btn btn-outline-primary btn-sm"
-        (click)="openNewFormModal()"
-      >
-        Kamer toevoegen
-      </button>
-    </div>
-    <br />
-    <!--div class="infotext" *ngIf="showResButton">Selecteer de kamer(s) die u wilt reserveren</div-->
-    <table
-      class="table table-striped table-sm"
-      [class.table-small]="showResButton"
-    >
-      <thead>
-        <tr>
-          <th *ngIf="showResButton">Select</th>
-          <th (click)="clickColumnHandler('kamerNaam')">
-            Kamernaam<i class="fa fa-fw fa-sort"></i>
-          </th>
-          <th (click)="clickColumnHandler('kamerType')">
-            Kamer type<i class="fa fa-fw fa-sort"></i>
-          </th>
-          <th (click)="clickColumnHandler('kamerLigging')">
-            Uitizcht<i class="fa fa-fw fa-sort"></i>
-          </th>
-          <th (click)="clickColumnHandler('aantalPersonen')">
-            Aantal personen<i class="fa fa-fw fa-sort"></i>
-          </th>
-          <th (click)="clickColumnHandler('prijs')">
-            Prijs<i class="fa fa-fw fa-sort"></i>
-          </th>
-          <th></th>
-          <!--th *ngIf="showResButton"></th-->
-        </tr>
-      </thead>
-      <tbody>
-        <div
-          *ngIf="(kamers | async)?.length > 0; then welkamers; else geenKamers"
-        ></div>
-        <ng-template #welkamers>
-          <tr
-            *ngFor="
-              let kamer of (kamers
-                | async
-                | kamersfilter: show
-                | sortgrid: field)
-            "
-          >
-            <td *ngIf="showResButton">
-              <!-- <input
-                [formControl]="myCheckbox"
-                type="checkbox"
-                (change)="onSelectRoom(kamer)"
-              /> -->
-            </td>
-            <td>{{ kamer.kamerNaam }}</td>
-            <td>{{ kamer.kamerType }}</td>
-            <td>{{ kamer.kamerLigging }}</td>
-            <td>{{ kamer.aantalPersonen }}</td>
-            <td>{{ kamer.prijs | currency: "EUR" }}</td>
-            <td class="text-right">
-              <i
-                *ngIf="showResButton"
-                class="fas fa-marker mr-2"
-                placement="top"
-                ngbTooltip="Reserveren"
-                (click)="openFormKamerReserveringModal(kamer.kamerNaam)"
-              ></i>
-              <i
-                class="fas fa-edit mr-2"
-                placement="top"
-                ngbTooltip="Wijzigen"
-                (click)="onSelect(kamer); openEditFormModal()"
-              ></i>
-              <i
-                class="fas fa-trash-alt mr-2"
-                placement="top"
-                ngbTooltip="Verwijderen"
-                (click)="onSelect(kamer); openSm(deleteModal)"
-              ></i>
-            </td>
-          </tr>
-        </ng-template>
-        <ng-template #geenKamers>
-          <div class="Noresultfound">
-            Helaas geen kamers beschikbaar in deze periode
-          </div>
-        </ng-template>
-      </tbody>
-    </table>
-
-    <app-kamer-tabel [kamers$]="kamers"></app-kamer-tabel>
-
-    <!--div class="infotext d-flex justify-content-start" *ngIf="showResButton">Selecteer de kamer(s) die u wilt reserveren</div-->
-    <div class="infotext" *ngIf="showResButton">
-      Selecteer de kamer(s) die u wilt reserveren
-    </div>
-  </div>
       <button type="button" class="btn btn-outline-primary btn-sm" (click)= "showAvailableRoomsModal()">Beschikbare kamers</button>
       <button type="button" class="btn btn-outline-primary btn-sm" (click)="openNewFormModal()">Kamer toevoegen</button>
   </div>
   <br />
   <!--div class="infotext" *ngIf="showResButton">Selecteer de kamer(s) die u wilt reserveren</div-->
+  </div>
+<br>
+  <app-kamer-tabel [kamers$]="kamers"></app-kamer-tabel>
+
   <table class="table table-striped table-sm" [class.table-small]="showResButton">
     <thead>
     <tr>
-      <!-- <th *ngIf="showResButton">Select</th> -->
+      <th *ngIf="showResButton">Select</th>
       <th (click)="clickColumnHandler('kamerNaam')">Kamernaam<i class="fa fa-fw fa-sort"></i></th>
       <th (click)="clickColumnHandler('kamerType')">Kamer type<i class="fa fa-fw fa-sort"></i></th>
-      <th (click)="clickColumnHandler('kamerLigging')">Uitzicht<i class="fa fa-fw fa-sort"></i></th>
+      <th (click)="clickColumnHandler('kamerLigging')">Uitizcht<i class="fa fa-fw fa-sort"></i></th>
       <th (click)="clickColumnHandler('aantalPersonen')">Aantal personen<i class="fa fa-fw fa-sort"></i></th>
       <th (click)="clickColumnHandler('prijs')">Prijs<i class="fa fa-fw fa-sort"></i></th>
       <th></th>
       <!--th *ngIf="showResButton"></th-->
     </tr>
     </thead>
+  </table>
     <tbody>
-    <div *ngIf="(kamers| async)?.length>0, then roomsAvailable else noRoomsAvailable"></div>
-    <ng-template #roomsAvailable>
-    <tr *ngFor="let kamer of (kamers | async | kamersfilter: show | sortgrid:field); let i = index"  (click)="showResButton && setClickedRow(i, kamer)" [class.active]="showResButton && roomSelected[i] ">
-        <!-- <td *ngIf="showResButton">
+    <div *ngIf="(kamers| async)?.length>0, then welkamers else geenKamers"></div>
+    <ng-template #welkamers>
+    <tr *ngFor="let kamer of (kamers | async | kamersfilter: show | sortgrid:field)">
+        <td *ngIf="showResButton">
             <input  [formControl]="myCheckbox" type="checkbox" (change)="onSelectRoom(kamer)"/>
-       </td> -->
+
+       </td>
         <td>{{ kamer.kamerNaam }}</td>
         <td>{{ kamer.kamerType }}</td>
         <td>{{ kamer.kamerLigging }}</td>
         <td>{{ kamer.aantalPersonen }}</td>
         <td>{{ kamer.prijs | currency: "EUR" }}</td>
         <td class="text-right">
-          <!--i *ngIf="showResButton" class="fas fa-marker mr-2" placement="top" ngbTooltip="Reserveren" (click)="openFormKamerReserveringModal(kamer.kamerNaam)"></i-->
+          <i *ngIf="showResButton" class="fas fa-marker mr-2" placement="top" ngbTooltip="Reserveren" (click)="openFormKamerReserveringModal(kamer.kamerNaam)"></i>
           <i class="fas fa-edit mr-2" placement="top" ngbTooltip="Wijzigen" (click)="onSelect(kamer); openEditFormModal()"></i>
           <i class="fas fa-trash-alt mr-2" placement="top" ngbTooltip="Verwijderen" (click)="onSelect(kamer); openSm(deleteModal)"></i>
         </td>
       </tr>
     </ng-template>
-    <ng-template #noRoomsAvailable>
+    <ng-template #geenKamers>
       <div class="Noresultfound">Helaas geen kamers beschikbaar in deze periode</div>
       </ng-template>
     </tbody>
-  </table>
+
   <!--div class="infotext d-flex justify-content-start" *ngIf="showResButton">Selecteer de kamer(s) die u wilt reserveren</div-->
   <div class="infotext" *ngIf="showResButton">Selecteer de kamer(s) die u wilt reserveren</div>
-
+</div>
   <div *ngIf="showResButton && reserverRooms.length > 0" class="room-bucket">
-    <div>Voor de periode:</div>
-    <h6>{{ datumvan }} tot {{ datumtot }}</h6>
-    <div>
-      Aantal nachten:
-      <h6>{{ numberOfDays }} nacht(en)</h6>
-    </div>
-    <div>hebt u de volgende kamers geselecteerd:</div>
+      <div>Voor de periode:  </div>
+      <h6>{{datumvan}} tot {{datumtot}} </h6>
+      <div>Aantal nachten: <h6>{{numberOfDays }} nacht(en)</h6>  </div>
+      <div>hebt u de volgende kamers geselecteerd:</div>
 
-    <hr class="bg-light" />
-    <div class="row">
-      <div class="col-8 text-info">kamer</div>
-      <div class="col-2 text-info">Prijs/nacht</div>
-      <div class="col-2"></div>
-    </div>
-    <div
-      *ngFor="let room of reserverRooms"
-      class="row"
-      [routerLink]="'/film-details/' + room.kamerNaam"
-    >
-      <div class="col-8">{{ room.kamerNaam }} ({{ room.kamerType }})</div>
-      <div class="col-2">{{ room.prijs }}</div>
-      <div class="col-2" hidden>{{ numberOfDays }} * {{ room.prijs }}</div>
-      <div class="col-2">
-        <button
-          class="btn-xs btn-outline-info"
-          placement="top"
-          ngbTooltip="Verwijderen"
-          (click)="deleteRoomFromBucket(room)"
-        >
-          X
-        </button>
       <hr class="bg-light">
       <div class="row">
           <div class="col-8 text-info">kamer</div>
           <div class="col-2 text-info">Prijs/nacht</div>
           <div class="col-2"></div>
       </div>
-      <div *ngFor="let room of reserverRooms" class="row" >
+      <div *ngFor="let room of reserverRooms" class="row" [routerLink]="'/film-details/' + room.kamerNaam">
           <div class="col-8">{{room.kamerNaam}} ({{room.kamerType}})</div>
           <div class="col-2">{{room.prijs}}</div>
           <div class="col-2" hidden>{{numberOfDays}} * {{room.prijs}}</div>
@@ -200,67 +75,37 @@
               <button class="btn-xs btn-outline-info" placement="top" ngbTooltip="Verwijderen" (click)="deleteRoomFromBucket(room)">X</button>
             </div>
       </div>
-    </div>
 
-    <hr class="bg-light" />
-    <div class="row">
-      <div class="col-8 text-danger">
-        Totale prijs ({{ numberOfDays }} nacht(en))
+      <hr class="bg-light">
+      <div class="row">
+          <div class="col-8 text-danger">Totale prijs ({{numberOfDays}} nacht(en))</div>
+          <div class="col-2 text-danger">{{totalPrice | currency: "EUR" }} </div>
       </div>
-      <div class="col-2 text-danger">{{ totalPrice | currency: "EUR" }}</div>
-    </div>
-    <hr class="bg-light" />
-    <div class="row">
-      <div class="d-flex justify-content-start">
-        <button
-          type="button"
-          class="btn btn-primary"
-          (click)="openFormKamerToReserveMultipleRooms(reserverRooms)"
-        >
-          Reserveer
-        </button>
+      <hr class="bg-light">
+      <div  class="row">
+          <div class="d-flex justify-content-start">
+              <button type="button" class="btn btn-primary" (click)= "openFormKamerToReserveMultipleRooms(reserverRooms)">Reserveer</button>
+          </div>
       </div>
-    </div>
-  </div>
-  <!-- Modal to confirm deleting room-->
-  <ng-template #deleteModal let-modal>
+
+</div>
+<!-- Modal to confirm deleting room-->
+<ng-template #deleteModal let-modal>
     <div class="modal-header">
       <h4 class="modal-title" id="modal-basic-title">Kamer verwijderen</h4>
-      <button
-        type="button"
-        class="close"
-        aria-label="Close"
-        (click)="modal.dismiss('Cross click')"
-      >
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <div class="modal-body">
       <form>
         <div class="form-group">
-          <P
-            >Uw staat op het punt om kamer
-            <i>{{ selectedKamer?.kamerNaam }}</i> te verwijderen. Weet u dit
-            zeker?</P
-          >
+          <P>Uw staat op het punt om kamer <i>{{selectedKamer?.kamerNaam}}</i> te verwijderen. Weet u dit zeker?</P>
         </div>
       </form>
     </div>
     <div class="modal-footer">
-      <button
-        type="button"
-        class="btn btn-danger"
-        (click)="modal.close('Save click')"
-      >
-        Nee
-      </button>
-      <button
-        type="button"
-        class="btn btn-success"
-        (click)="deleteRoom(selectedKamer); modal.close('Save click')"
-      >
-        Ja
-      </button>
+      <button type="button" class="btn btn-danger" (click)="modal.close('Save click')">Nee</button>
+      <button type="button" class="btn btn-success" (click)="deleteRoom(selectedKamer); modal.close('Save click')">Ja</button>
     </div>
   </ng-template>
-</div>
